--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
-hello world!
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="utf-8" />
+  <title>GenAI‑Lab – EU Forschungsinfrastruktur</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>GenAI‑Lab – Digitale Forschungsinfrastruktur</h1>
+  </header>
+
+  <main>
+    <section id="summary">
+      <h2>Projektbeschreibung</h2>
+      <p>
+        Das GenAI-Lab entsteht als zentrale Plattform an der Technischen Universität Clausthal, um das volle Potenzial Generativer Künstlicher Intelligenz (GenAI) für das Systems Engineering zu erschließen. Ziel ist es, sowohl grundlegende KI-Methoden weiterzuentwickeln als auch konkrete ingenieurwissenschaftliche Anwendungen – von ressourceneffizientem Design über kreislauforientierte Produktion bis hin zu kognitiver Robotik und nachhaltiger Mobilität – voranzutreiben.
+      </p>
+      <p>
+        Mit dem GenAI-Lab verfügt die TU Clausthal künftig über eine skalierbare Hochleistungsumgebung, die Forschung, Lehre und Transfer im Bereich generativer KI nachhaltig stärkt und regionale Innovationspartnerschaften fördert.
+      </p>
+    </section>
+
+    <section id="funding">
+      <h2>Förderung & Standort</h2>
+      <p><strong>Fördergeber:</strong> Europäische Union &amp; Land Niedersachsen (EFRE/ESF/ELER)</p>
+      <p><strong>Standort:</strong> Rechenzentrum der TU Clausthal, Erzstraße 18, 38678 Clausthal-Zellerfeld</p>
+      <p><strong>Inbetriebnahme:</strong> spätestens 01.09.2025</p>
+      <p><strong>Projektleiter:</strong> Prof. Dr. Christian Bartelt, Institute for Software & Systems Engineering</p>
+    </section>
+
+    <section id="specs">
+      <h2>Technische Spezifikationen</h2>
+      <h3>Kerninfrastruktur</h3>
+      <ul>
+        <li><strong>GPU-Cluster:</strong> Hochleistungsfähiges System mit
+          <ul>
+            <li>2 High-Performance-Nodes, jeweils bis zu 8 NVIDIA H200 NVL-GPUs (mind. 8 GPUs gesamt) mit NVLink</li>
+            <li>2 Mid-Performance-Nodes mit bis zu 8 NVIDIA RTX PRO 6000 Blackwell Max-Q-GPUs</li>
+            <li>Masternode/Fileserver mit ≥ 150 TB Speicher</li>
+            <li>InfiniBand-Netz bis 200 Gbit/s für maximale Durchsatzraten</li>
+          </ul>
+        </li>
+        <li><strong>Optimierung für:</strong>
+          <ul>
+            <li>Training (Modelle < 3 B Par.)</li>
+            <li>Finetuning bis 70 B</li>
+            <li>Inferenz aktueller Sprachmodelle (Llama 3, Qwen 3, Gemma 3)</li>
+            <li>Vision-Modelle wie Segment Anything oder CLIP</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+
+    <section id="access">
+      <h2>Mehrwert und Nutzung</h2>
+      <ul>
+        <li><strong>Offene Werkstatt & Workshops:</strong> Regelmäßige Veranstaltungen für Wissenschaft, Start-ups und Industriepartner zur Vorstellung der Infrastruktur und gemeinsamer Projektanbahnung.</li>
+        <li><strong>Innovationshub:</strong> Vernetzt regionale Hochschulen und Unternehmen und unterstützt die niedersächsische RIS3-Innovationsstrategie.</li>
+        <li><strong>Nutzerfreundlicher Zugang:</strong> Schulungen, Hotline und Vor-Ort-Support in deutscher Sprache; Wartung und Ersatzteilservice sind für fünf Jahre zugesichert.</li>
+      </ul>
+      <p>Die Anmeldung zu Workshops wird nach der Inbetriebnahme der Infrastruktur (spätestens 01.09.2025) möglich sein. Bei Interesse an einer Kooperation kontaktieren Sie uns bitte per E-Mail:</p>
+    </section>
+
+
+  </main>
+
+  <footer>
+    <div class="footer-logos">
+      <img src="images/eu_fuer_niedersachsen.png" alt="EU‑ und Niedersachsen‑Förderung" />
+    </div>
+  </footer>
+</body>
+</html>
